@@ -1,3 +1,9 @@
+Wed, 21 Mar 2007 21:32:43 +0100 <thp@perli.net>
+        * src/gpodder/libpodcasts.py: Convert numeric HTML entities to 
+          symbolic entities so these will be replaced with the right unicode
+          character (for podcast descriptions); thanks to Gerrit Sangel 
+          (newsletter sangel.eu) for reporting this bug on gpodder-devel
+
 Tue, 20 Mar 2007 19:47:14 +0100 <thp@perli.net>
         * data/po/nl.po: Added Dutch translation from Pieter De Decker
           (pdedecker gmail com)
